--- a/EjerciciosCSS/CSS/Ejercicio5.css
+++ b/EjerciciosCSS/CSS/Ejercicio5.css
@@ -101,7 +101,7 @@ img {
 }
 
 #cabecera h1 {
-  background: url(../imagenes/logo.gif) no-repeat -5px -10px;
+  background: url(../imagenes/logo.png) no-repeat -5px -10px;
 }
 
 #cabecera h1 span {
